2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Upgrade to RobOptim core 0.5.6.

        CAUTION: starting from now, $(libdir)/roboptim-core /MUST/
        be in your LT_LIBRARY_PATH! It is also recommended to remove
        manually your old $(libdir)/roboptim-core-ipopt* files.

	* configure.ac: Require newer roboptim-core.
	* include/roboptim/core/plugin/ipopt.hh:
	Declare parameters management methods.
	* src/Makefile.am: Install plug-in in separate directory.
	* src/roboptim-core-ipopt-plugin.cc: Management parameters properly.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-08-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Update to new SourceForge URLs.
	* .gitmodules: Update to new URLs.
	* bootstrap: Detect new alias.

2009-07-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Disable gcov support in plug-in.
	* src/Makefile.am: Here.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle submodule and check for git.
	* bootstrap: Here.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Update build-aux submodule.
	* build-aux: Update submodule.

2009-07-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Use submodules to factorize build-aux, doc and tests.
	* .gitmodules: New.
	* build-aux/acx_pthread.m4: Remove.
	* build-aux/autotest.at: Remove.
	* build-aux/autotest.mk: Remove.
	* build-aux/boost.m4: Remove.
	* build-aux/bootstrap: Remove.
	* build-aux/config.guess: Remove.
	* build-aux/config.sub: Remove.
	* build-aux/deb.mk: Remove.
	* build-aux/depcomp: Remove.
	* build-aux/doxygen.m4: Remove.
	* build-aux/ebuild.mk: Remove.
	* build-aux/init.mk: Remove.
	* build-aux/install-sh: Remove.
	* build-aux/ipopt.m4: Remove.
	* build-aux/libtool.m4: Remove.
	* build-aux/ltmain.sh: Remove.
	* build-aux/ltoptions.m4: Remove.
	* build-aux/ltsugar.m4: Remove.
	* build-aux/ltversion.m4: Remove.
	* build-aux/lt~obsolete.m4: Remove.
	* build-aux/missing: Remove.
	* build-aux/move-if-change: Remove.