@@ -7,9 +7,16 @@ config.h.in
 config.h.in~
 configure
 doc/Makefile.in
+packages/Makefile.in
+packages/debian/Makefile.in
+packages/ebuild/Makefile.in
+packages/rpm/Makefile.in
 src/Makefile.in
 tests/Makefile.in
 tests/testsuite
 +committed/
 ,*
 testsuite.log
+*svn-log*
+.version
+.tarball-version
