@@ -1,3 +1,5 @@
+include $(top_srcdir)/build-aux/init.mk
+
 # Search for autoconf macros in build-aux.
 ACLOCAL_AMFLAGS = -I build-aux
 
@@ -15,12 +17,16 @@ EXTRA_DIST = bootstrap build-aux/bootstrap
 # Nothing to do in this directory.
 all:
 
-# Libtool rules
-LIBTOOL_DEPS = @LIBTOOL_DEPS@
-libtool: $(LIBTOOL_DEPS)
-	$(SHELL) ./config.status --recheck
+# Include various rules...
+include $(top_srcdir)/build-aux/dist-sign.mk
+include $(top_srcdir)/build-aux/doc-recursive.mk
+include $(top_srcdir)/build-aux/libtool.mk
+include $(top_srcdir)/build-aux/pkg-config.mk
+include $(top_srcdir)/build-aux/git-version-gen.mk
 
-# -- Generate documentation
-.PHONY: doc html
-doc html:
-	cd doc && $(MAKE) $(AM_MAKEFLAGS) $@
+#include $(top_srcdir)/build-aux/rpm.mk
+
+
+SF_PROJECT_ID=roboptim
+include $(top_srcdir)/build-aux/announce-gen.mk
+include $(top_srcdir)/build-aux/sf-release.mk
